<resources>
    <string name="app_name">OnlyVans</string>
    <string name="hint_title">Item Title</string>
    <string name="button_addItem">Add</string>
    <string name="hint_description">Description</string>
    <string name="vanThumbnail">Van Thumbnail</string>
    <string name="menu_cancelAddVan">Cancel</string>
    <string name="vanAdd">Add</string>
    <string name="update_van">Update Van</string>
    <string name="currently_selected_image">Currently Selected Image</string>
    <string name="button_addImage">Choose Image</string>
    <string name="change_image">Choose New Image</string>
    <string name="select_van_image">Select Image</string>
    <string name="logo_alt">Only Vans Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Create</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="van_image">Van Image</string>
    <string name="user_logged_in">loggedInState</string>
    <string name="nav_header_title">Only Vans</string>
    <string name="nav_header_subtitle">Because dragons fuck cars.</string>
    <string name="group_community">Community</string>
    <string name="action_map">Map</string>
    <string name="action_gallery">Gallery</string>
    <string name="action_all_vans">All Vans</string>
    <string name="action_add_van">Add Van</string>
    <string name="hint_color">Color</string>
    <string name="hint_engine">Engine Size</string>
    <string name="hint_year">Year</string>
    <string name="edit">Edit</string>
    <string name="favorite">Favourite</string>
    <string name="more">More</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="button_location">Set Location</string>

    <string-array name="colors_array">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Black</item>
        <item>White</item>
    </string-array>

    <string-array name="engines_array">
        <item>1.4</item>
        <item>1.5</item>
        <item>1.6</item>
        <item>1.8</item>
        <item>1.9</item>
        <item>2.0</item>
        <item>2.2</item>
        <item>2.4</item>
        <item>2.6</item>
        <item>3.0</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Log Out</string>
    <string name="sign_in_button">Sign In Button</string>

</resources>