<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/vanListFragment"
            android:title="@string/action_all_vans" />
        <item
            android:id="@+id/vanFragment"
            android:title="@string/action_add_van" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/action_gallery" />
        <item
            android:id="@+id/mapsActivity"
            android:title="@string/action_map" />
        <item
            android:id="@+id/logoutActivity"
            android:title="@string/logout" />
    </group>

</menu>
