<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signin"
        android:text="@string/sign_in"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="50dp"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@id/signin"
        android:hint="@string/hint_username"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:autofillHints="@string/hint_username"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/username"
        android:hint="@string/hint_password"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:inputType="textPassword"
        android:autofillHints="@string/hint_username" />

    <RelativeLayout
        android:layout_below="@id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginbtn"
            android:text="@string/sign_in"
            android:layout_margin="20dp"
            android:onClick="handleLogin"
            />

        <Button
            android:id="@+id/registerbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_toEndOf="@+id/loginbtn"
            android:onClick="createAccount"
            android:text="@string/create_account" />
    </RelativeLayout>

</RelativeLayout>