<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.VanActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_dynamic_primary20"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:layout_gravity="start">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:src="@drawable/text_only"
                        android:contentDescription="@string/van_image" />
                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/vanTitle"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints="A name for this van"
                    android:hint="@string/hint_title"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/vanDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:autofillHints="A description of the van"
                    android:hint="@string/hint_description"
                    android:inputType="text"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <Spinner
                        android:id="@+id/colorPicker"
                        android:layout_width="0dp"
                        android:layout_height="28dp"
                        android:layout_margin="2dp"
                        android:layout_weight=".33" />

                    <Spinner
                        android:id="@+id/enginePicker"
                        android:layout_width="0dp"
                        android:layout_height="28dp"
                        android:layout_margin="2dp"
                        android:layout_weight=".33" />

                    <Spinner
                        android:id="@+id/yearPicker"
                        android:layout_width="0dp"
                        android:layout_height="28dp"
                        android:layout_margin="2dp"
                        android:layout_weight=".33" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/material_dynamic_primary20"
                    android:onClick="addVanImage"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/vanImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/currently_selected_image"
                    app:srcCompat="@mipmap/ic_launcher" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/material_dynamic_primary20"
                    android:onClick="addVan"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addItem"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>